fix(table): fix sort menu z-index
affects: @synerise/ds-table

--- a/packages/components/table/src/style/table.less
+++ b/packages/components/table/src/style/table.less
@@ -270,6 +270,11 @@
           }
         }
       }
+
+      &.ant-table-cell-fix-left,
+      &.ant-table-cell-fix-right {
+        z-index: 10;
+      }
     }
 
     tbody > tr {
